# project_ecom

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
cart/: cart.py  context_processors.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_rename_is_active_promocode_active_and_more.py
cart/templates/: cart_summary.html
cart/templatetags/: custom_filter.py
ecom/: deployment.py  settings.py  urls.py  wsgi.py
payment/: admin.py  apps.py  forms.py  hooks.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_rename_address1_shippingaddress_shipping_address1_and_more.py  0003_alter_shippingaddress_shipping_address2_order_and_more.py  0004_order_shipped.py  0005_order_date_shipped.py  0006_alter_orderitems_product.py  0007_order_invoice_order_paid.py  0008_orderitems_variant.py  0009_paidorder.py  0010_alter_orderitems_variant.py  0011_order_phone_number.py
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_category_options_product_is_sale_and_more.py  0003_rename_category_product_category.py  0004_profile.py  0005_profile_old_cart.py  0006_about_us.py  0007_remove_product_image_alter_product_sale_price_and_more.py  0008_product_home_image.py  0009_remove_product_home_image_product_image.py  0010_rename_image_product_product_image.py  0011_rename_product_image_product_image.py  0012_product_size_product_stock_qty_alter_product_image.py  (+18 more)
(+26 files in other folders)
